# vocal-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGNOSTIC.md  CLAUDE.md  COLAB_SETUP.md  METODOLOGIA.md  README.md  TODO_METODOLOGIA.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: ademilde_metadata.json
docs/: METODOLOGIA.md  PLANO_SEPARATION.md  glossario_bioacustico.md
docs/en/: BIOACOUSTIC_GLOSSARY.md  COLAB_SETUP.md  METHODOLOGY.md
docs/pt-BR/: COLAB_SETUP.md  GLOSSARIO_BIOACUSTICO.md  METODOLOGIA.md  README.md
outputs/: analise_ademilde.md  analise_vmi.md  analysis_report.md  llm_report.md  relatorio_llm.md  vmi_analysis.md  xgb_predictions.csv
paper/: analyze_citations.py  article.tex  citation_verification.md  citation_verification_complete.md  citation_verification_updated.md  cover_letter.tex  extract_pdfs.sh  reference_checklist.md  references.bib  update_verification.py
paper/articles_txt/: 00_index.txt  Wlodarczak2022.txt  alku2023.txt  boratto2025.txt  bourne2012.txt  chen2016_xgboost.txt  cotton2007.txt  defossez2021.txt  degottex2011.txt  drugman2019.txt  ghasemzadeh2023.txt  gowda2022.txt  gupta2024.txt  hanson1995.txt  henrich2004.txt  henrich2006.txt  hinrichs2026.txt  kim2018_crepe.txt  kim2025.txt  kreiman2012.txt  kreiman2014.txt  lee2013_pseudolabel.txt  maryn2015.txt  nigam2000.txt  nudelman2_2025.txt  rouard2023.txt  roubeau2009.txt  sundberg1974.txt  teixeira2013.txt  yousef2024.txt
paper/citation_analysis/: 00_analysis_report.txt  01_search_suggestions.txt  alku2023_head.txt  alku2023_sections.txt  boratto2025_head.txt  boratto2025_sections.txt  bourne2012_head.txt  bourne2012_sections.txt  chen2016_head.txt  chen2016_sections.txt  cotton2007_head.txt  cotton2007_sections.txt  defossez2021_head.txt  defossez2021_sections.txt  degottex2011_head.txt  degottex2011_sections.txt  drugman2019_head.txt  drugman2019_sections.txt  ghasemzadeh2023_head.txt  ghasemzadeh2023_sections.txt  gowda2022_head.txt  gowda2022_sections.txt  gupta2024_head.txt  gupta2024_sections.txt  henrich2004_head.txt  henrich2004_sections.txt  henrich2006_head.txt  henrich2006_sections.txt  kim2018_head.txt  kim2018_sections.txt  kim2025_head.txt  kim2025_sections.txt  kreiman2014_head.txt  kreiman2014_sections.txt  lee2013_head.txt  lee2013_sections.txt  maryn2015_head.txt  maryn2015_sections.txt  nigam2000_head.txt  nigam2000_sections.txt  (+6 more)
paper/citation_passages/: 00_report.txt  drugman2019_head.txt  drugman2019_keywords.txt  gowda2022_head.txt  gowda2022_keywords.txt  gupta2024_head.txt  gupta2024_keywords.txt  henrich2004_head.txt  henrich2004_keywords.txt  henrich2006_head.txt  henrich2006_keywords.txt  kreiman2014_head.txt  kreiman2014_keywords.txt  nigam2000_head.txt  nigam2000_keywords.txt  rouard2023_head.txt  rouard2023_keywords.txt
src/vocal_analysis/: __init__.py
src/vocal_analysis/analysis/: __init__.py  exploratory.py  llm_report.py  run_analysis.py
src/vocal_analysis/features/: __init__.py  articulation.py  extraction.py  spectral.py  vmi.py
src/vocal_analysis/modeling/: __init__.py  classifier.py
src/vocal_analysis/preprocessing/: __init__.py  audio.py  process_ademilde.py  separation.py
src/vocal_analysis/scripts/: __init__.py  regenerate_validation_plot.py  regenerate_validation_plot_lite.py
src/vocal_analysis/utils/: __init__.py  pitch.py
src/vocal_analysis/visualization/: __init__.py  plots.py
tests/: conftest.py  test_features.py  test_preprocessing.py  test_separation.py  test_spectral.py  test_vmi.py
